--- a/css/style.css
+++ b/css/style.css
@@ -918,6 +918,8 @@ ul,ol {
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity var(--timing-function-trasition), visibility var(--timing-function-trasition);
 
+
+
 }
 
 .backdrop.is-hidden .modal{
@@ -926,6 +928,10 @@ ul,ol {
 }
 
 .modal{
+    padding-top: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    padding-left: 40px;
 
     position: absolute;
     width: 528px;
@@ -946,7 +952,7 @@ ul,ol {
 .icon-close-btn{
     width: 30px;
     height: 30px;
-    border: 1px solid var(--primery-text-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     
     position: absolute;
@@ -956,11 +962,70 @@ ul,ol {
 
 }
 
+.icon-close{
+    transition: fill var(--timing-function-trasition);
+}
+
+.icon-close:hover{
+    fill: var(--akcent-color);
+
+}
+
 .is-hidden{
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
 }
 
+.modal-title{
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    text-align: center;
+    margin-bottom: 30px;
+}
 
 
+.modal-input{
+    width: 448px;
+    height: 40px;
+    border-radius: 4px;
+    border-color: rgba(33, 33, 33, 0.2);
+    padding-left: 42px;
+}
+
+.modal-label{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.2;
+    color: #757575;
+    margin-bottom: 4px;
+}
+
+
+
+.modal-field{
+    position: relative;
+    margin-bottom: 28px;
+}
+
+.modal-icon{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 12px;
+}
+
+.modal-text-area{
+    width: 100%;
+    height: 120px;
+    resize: none;
+}
+
+.modal-input-check{
+    padding-top: 12px;
+    padding-right: 16px;
+    padding-bottom: 12px;
+    padding-left: 16px;
+}
