--- a/css/style.css
+++ b/css/style.css
@@ -1032,44 +1032,16 @@ ul,ol {
     width: 100%;
     height: 120px;
     resize: none;
-}
 
-.modal-text-area{
     padding-top: 12px;
     padding-right: 16px;
     padding-bottom: 12px;
     padding-left: 16px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
 }
 
-.modal-chekc-lable{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.6;
-    letter-spacing: 0.03em;
-    color: #757575;
-}
-
-.modal-chekc-lable::before{
-    content: '';
-    width: 16px;
-    height: 15px;
-    border-radius: 3px;
-    border: 2px solid #212121;
-    margin-right: 7px;
-}
-
-.modal-link{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.6;
-    letter-spacing: 0.03em;
-    color: var(--akcent-color);
-}
-
-.modal-field-check{
-    /* text-align: center; */
-    margin-bottom: 30px;
-}
 
 .modal-input-check{
     position: absolute;
@@ -1084,8 +1056,53 @@ ul,ol {
     margin: -1px;
 }
 
+.modal-field-check{
+    margin-bottom: 30px;
+
+
+
+}
+
+.modal-chekc-lable{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    color: #757575;
+
+}
+
+.modal-chekc-lable::before{
+    content: '';
+    width: 16px;
+    height: 15px;
+    border-radius: 3px;
+    border: 2px solid #212121;
+    margin-right: 7px;
+}
+
+.modal-input-check:focus + .modal-chekc-lable::before{
+    background-color: var(--akcent-color);
+    background-image: url(../images/symbol-defs.svg#icon-check);
+}
+
+.modal-link{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    color: var(--akcent-color);
+}
+
+
+
+
+
 .modal-btn-box{
-    display: block;
     text-align: center;
 }
 
