--- a/css/style.css
+++ b/css/style.css
@@ -708,6 +708,8 @@ ul,ol {
 
     margin-right: 12px;
 
+    transition: border-color var(--timing-function-trasition) ;
+
 
 }
 
@@ -1065,6 +1067,7 @@ ul,ol {
     border: 1px solid rgba(33, 33, 33, 0.2);
     padding-left: 42px;
     outline: none;
+    transition: border-color var(--timing-function-trasition) fill var(--timing-function-trasition);
 }
 
 .modal-input:focus{
@@ -1111,6 +1114,18 @@ ul,ol {
 
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+
+    color: #757575;
+}
+
+
+.modal-text-area::placeholder{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);        
 }
 
 
@@ -1154,14 +1169,17 @@ ul,ol {
     border-radius: 3px;
     border: 2px solid #212121;
     margin-right: 7px;
+    transition: background-colo var(--timing-function-trasition);
 }
 
 .modal-input-check:checked + .modal-chekc-lable::before{
     background-color: var(--akcent-color);
-    background-image: url("data:image/svg+xml,%3Csymbol id='icon-check' viewBox='0 0 42 32'%3E%3Cpath fill='%23fff' style='fill: var(--color1, %23fff); stroke: var(--color1, %23fff)' stroke='%23fff' stroke-linejoin='miter' stroke-linecap='butt' stroke-miterlimit='4' stroke-width='0.64' d='M6.262 15.206l-0.221-0.211-0.221 0.208-3.085 2.925 0.243 0.234 11.408 10.88 0.221-0.211 24.256-23.139-0.243-0.23-3.043-2.902-0.221 0.211-20.97 19.987-8.125-7.75z'%3E%3C/path%3E%3C/symbol%3E");
+    background-image: url(../images/icon-send.svg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+    border: none;
+
 }
 
 .modal-link{
