--- a/css/style.css
+++ b/css/style.css
@@ -1056,7 +1056,7 @@ ul,ol {
     line-height: 1.15;
     letter-spacing: 0.03em;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 12px;
 }
 
 
@@ -1068,6 +1068,8 @@ ul,ol {
     padding-left: 42px;
     outline: none;
     transition: border-color var(--timing-function-trasition) fill var(--timing-function-trasition);
+
+    /* margin-top: 4px; */
 }
 
 .modal-input:focus{
@@ -1083,12 +1085,13 @@ ul,ol {
     font-weight: 400;
     line-height: 1.2;
     color: #757575;
-    margin-bottom: 4px;
+
 }
 
 .modal-field{
     position: relative;
-    margin-bottom: 28px;
+    margin-bottom: 10px;
+    margin-top: 4px;
 }
 
 .modal-field-commit{
@@ -1116,6 +1119,8 @@ ul,ol {
     border-radius: 4px;
 
     color: #757575;
+
+    margin-top: 4px;
 }
 
 
@@ -1144,9 +1149,10 @@ ul,ol {
 
 .modal-field-check{
     margin-bottom: 30px;
+}
 
-
-
+.modal-link{
+    margin-left: 5px;
 }
 
 .modal-chekc-lable{
